<resources>
<!--    <string name="app_name">BMICAL</string>-->
<!--    <string name="hint_wt">Weight (in KGs)</string>-->
<!--    <string name="hint_ht">Height (in cm)</string>-->
<!--    <string name="hint_cal">Calculate</string>-->
    <string name="strOverweight">You are Overweight</string>
    <string name="strUnderweight">You are Underweight</string>
    <string name="strHealthy">You are Healthy</string>
    <string name="strBMI">Your BMI is</string>
    <string name="strinvalid">please fill all the Details!!</string>
    <string name="strClear">Clear</string>


<string name="app_name">BMICALCULATOR</string>
<string name="hint_wt">Enter your weight(kg)</string>
<string name="hint_ht">Enter your height(cm)</string>
<string name="txt_btnCal">Calculate</string>
<string name="txt_result">Result</string>
<string name="txt_Msg">Message</string>
<!--<string name="str_overwt">You\re OverWeight!</string>-->
<!--<string name="str_underwt">You\re  UnderWeight!</string>-->
<!--<string name="str_hthy">You\re Healthy!</string>-->
</resources>