<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:id="@+id/edtWeight"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_wt"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="40sp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:autofillHints=""
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/edtHeight"
        android:ems="10"
        android:hint="@string/hint_ht"
        android:inputType="number"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:text="@string/txt_btnCal"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/txt_result"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Msg"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/txtMsg"/>


</LinearLayout>